--- a/java/TOC.yml
+++ b/java/TOC.yml
@@ -105,6 +105,8 @@
               href: jdk/java-jdk-flight-recorder-and-mission-control.md
             - name: Powody do migracji do środowiska Java 11
               href: jdk/reasons-to-move-to-java-11.md
+            - name: Przejście ze środowiska Java 8 do środowiska Java 11
+              href: jdk/transition-from-java-8-to-java-11.md
         - name: Visual Studio Code
           href: 'https://code.visualstudio.com/docs/languages/java'
         - name: IntelliJ IDEA
