--- a/java/TOC.yml
+++ b/java/TOC.yml
@@ -15,6 +15,8 @@
               href: spring-framework/deploy-spring-boot-java-app-with-maven-plugin.md?toc=/azure/java/toc.json&bc=/azure/java/breadcrumb/toc.json
         - name: Monitorowanie aplikacji internetowych
           href: /azure/azure-monitor/learn/java-quick-start?toc=/azure/java/toc.json&bc=/azure/java/breadcrumb/toc.json
+        - name: Azure Container Registry
+          href: /azure/container-registry/container-registry-java-quickstart?toc=/azure/java/toc.json&bc=/azure/java/breadcrumb/toc.json
         - name: Azure Resource Manager
           href: /azure/azure-resource-manager/resource-manager-quickstart-create-templates-use-intellij?toc=/azure/java/toc.json&bc=/azure/java/breadcrumb/toc.json
         - name: Azure DevOps Projects
@@ -144,7 +146,7 @@
           href: spring-framework/deploy-spring-boot-java-app-with-maven-plugin.md?toc=/azure/java/toc.json&bc=/azure/java/breadcrumb/toc.json
         - name: Wdrażanie kontenerów w usłudze App Service
           href: spring-framework/deploy-containerized-spring-boot-java-app-with-maven-plugin.md?toc=/azure/java/toc.json&bc=/azure/java/breadcrumb/toc.json
-        - name: Wdrażanie w usłudze App Service z usługi Azure Container Registry
+        - name: Wdrażanie w usłudze App Service z usługi ACR
           href: spring-framework/deploy-spring-boot-java-app-from-container-registry-using-maven-plugin.md?toc=/azure/java/toc.json&bc=/azure/java/breadcrumb/toc.json
         - name: Funkcje języka Java z użyciem usług Event Hub i Cosmos DB
           href: /azure/azure-functions/functions-event-hub-cosmos-db?toc=/azure/java/toc.json&bc=/azure/java/breadcrumb/toc.json
