--- a/java/spring-framework/index.yml
+++ b/java/spring-framework/index.yml
@@ -1,85 +1,78 @@
-### YamlMime:YamlDocument
-documentType: LandingData
-title: Oprogramowanie Spring na platformie Azure
+### YamlMime:Landing
+title: Dokumentacja dotycząca integracji oprogramowania Spring na platformie Azure
+summary: Spring to platforma aplikacji typu open source opracowana przez firmę Pivotal, która zapewnia uproszczone, modularne podejście do tworzenia aplikacji w języku Java. Zawartość w tej witrynie internetowej przedstawia, jak tworzyć i wdrażać aplikacje platformy Spring w chmurze.
 metadata:
-  document_id: null
-  title: Oprogramowanie Spring na platformie Azure
-  description: Zacznij tworzyć aplikacje na platformie Azure przy użyciu oprogramowania Spring.
-  keywords: 'Azure, Java, Maven, Spring, Boot'
+  title: Dokumentacja dotycząca integracji oprogramowania Spring na platformie Azure
+  description: Spring to platforma aplikacji typu open source opracowana przez firmę Pivotal, która zapewnia uproszczone, modularne podejście do tworzenia aplikacji w języku Java. Zawartość w tej witrynie internetowej przedstawia, jak tworzyć i wdrażać aplikacje platformy Spring w chmurze.
+  ms.service: azure-java
   author: bmitchell287
   ms.author: brendm
-  manager: douge
-  ms.date: 02/01/2018
+  ms.date: 03/13/2020
   ms.topic: landing-page
-  ms.technology: azure
-  ms.devlang: java
-  ms.service: multiple
-  ms.custom: seo-java-july2019
-sections:
-  - items:
-      - type: markdown
-        text: |
-          [Spring](https://spring.io/) to platforma aplikacji typu open source opracowana przez firmę [Pivotal](https://pivotal.io), która zapewnia uproszczone, modularne podejście do tworzenia aplikacji języka Java.  Przewodniki Szybki start i samouczki w tej witrynie internetowej przedstawiają, jak tworzyć i wdrażać aplikacje platformy Spring w chmurze.
-  - title: Przewodniki Wprowadzenie
-    items:
-      - type: list
-        style: icon48
-        items:
-          - image:
-              src: 'https://docs.microsoft.com/media/common/i_get-started.svg'
-            text: Programy Spring Boot Starter dla platformy Azure
-            href: spring-boot-starters-for-azure.md
-          - image:
-              src: 'https://docs.microsoft.com/azure/media/index/storage.svg'
-            text: Azure Storage
-            href: configure-spring-boot-starter-java-app-with-azure-storage.md
-          - image:
-              src: 'https://docs.microsoft.com/azure/media/index/ActiveDirectory.svg'
-            text: Usługa Azure Active Directory
-            href: configure-spring-boot-starter-java-app-with-azure-active-directory.md
-          - image:
-              src: 'https://docs.microsoft.com/azure/media/index/KeyVault.svg'
-            text: Usługa Key Vault
-            href: configure-spring-boot-starter-java-app-with-azure-key-vault.md
-          - image:
-              src: 'https://docs.microsoft.com/azure/media/index/EventHubs.svg'
-            text: Platforma Kafka i usługa Event Hubs
-            href: configure-spring-cloud-stream-binder-java-app-kafka-azure-event-hub.md
-          - image:
-              src: 'https://docs.microsoft.com/azure/media/index/ApplicationInsights.svg'
-            text: Application Insights
-            href: configure-spring-boot-java-applicationinsights.md
-  - title: Samouczki krok po kroku
-    items:
-      - type: markdown
-        text: 'Dowiedz się, jak integrować aplikacje Spring Boot z usługami platformy Azure.'
-      - type: list
-        style: unordered
-        className: spaced noBullet
-        items:
-          - html: <a href="configure-spring-boot-initializer-java-app-with-redis-cache.md">Jak skonfigurować aplikację Spring Initializr do używania usługi Redis Cache</a>
-          - html: <a href="configure-spring-boot-starter-java-app-with-cosmos-db.md">Jak używać programu Spring Boot Starter z interfejsem API języka SQL w usłudze Azure Cosmos DB</a>
-          - html: <a href="deploy-spring-boot-java-app-with-maven-plugin.md">Jak używać wtyczki Maven dla usługi Azure Web Apps do wdrażania aplikacji Spring Boot na platformie Azure</a>
-          - html: <a href="deploy-spring-boot-java-app-on-kubernetes.md">Wdrażanie aplikacji Spring Boot na platformie Kubernetes w usłudze Azure Container Service</a>
-          - html: <a href="deploy-spring-boot-java-app-on-linux.md">Wdrażanie aplikacji internetowej Spring Boot w systemie Linux w usłudze Azure Container Service</a>
-          - html: <a href="deploy-spring-boot-java-app-using-fabric8-maven-plugin.md">Wdrażanie aplikacji Spring Boot przy użyciu wtyczki Maven Fabric8</a>
-          - html: <a href="deploy-containerized-spring-boot-java-app-with-maven-plugin.md">Jak używać wtyczki Maven dla usługi Azure Web Apps do wdrażania konteneryzowanych aplikacji Spring Boot na platformie Azure</a>
-          - html: <a href="deploy-spring-boot-java-app-from-container-registry-using-maven-plugin.md">Jak używać wtyczki Maven dla usługi Azure Web Apps do wdrażania aplikacji Spring Boot z usługi Azure Container Registry do usługi Azure App Service</a>
-  - title: Samples
-    items:
-      - type: list
-        style: unordered
-        className: spaced noBullet
-        items:
-          - html: '<a href="https://github.com/Microsoft/azure-spring-boot/tree/master/azure-spring-boot-samples">Przykłady dotyczące środowiska Spring Boot dla platformy Azure</a>'
-          - html: '<a href="https://github.com/spring-guides/">Przewodniki dotyczące środowiska Spring Boot</a>'
-  - title: Dokumentacja
-    items:
-      - type: list
-        style: cards
-        className: cardsD
-        items:
-          - title: Platforma Spring
-            html: '<p><a href="https://spring.io/">Platforma Spring</a></p><p><a href="https://spring.io/docs">Informacje o platformie Spring</a></p><p><a href="https://spring.io/docs/reference">Dokumentacja referencyjna</a></p>'
-          - title: Spring Boot
-            html: '<p><a href="https://projects.spring.io/spring-boot/">Spring Boot</a></p><p><a href="https://start.spring.io/">Spring Initializr</a></p>'
+  ms.openlocfilehash: e7732a900c5f1684e9f0817d679f059e21be4941
+  ms.sourcegitcommit: efa585ecdcf1cc54a6f0b664fb83cd4f0ccc7b2c
+  ms.translationtype: HT
+  ms.contentlocale: pl-PL
+  ms.lasthandoff: 03/21/2020
+  ms.locfileid: "79990385"
+landingContent:
+- title: Przewodniki Wprowadzenie
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: Szablony startowe Spring Boot dla platformy Azure
+      url: spring-boot-starters-for-azure.md
+    - text: Usługa Azure Cosmos DB w rozwiązaniu Spring Data
+      url: how-to-guides-spring-data-cosmosdb.md
+  - linkListType: get-started
+    links:
+    - text: Azure Storage
+      url: configure-spring-boot-starter-java-app-with-azure-storage.md
+    - text: Usługa Key Vault
+      url: configure-spring-boot-starter-java-app-with-azure-key-vault.md
+    - text: Platforma Kafka i usługa Event Hubs
+      url: configure-spring-cloud-stream-binder-java-app-kafka-azure-event-hub.md
+    - text: Application Insights
+      url: configure-spring-boot-java-applicationinsights.md
+- title: Samouczki krok po kroku
+  linkLists:
+  - linkListType: tutorial
+    links:
+    - text: Zabezpieczanie aplikacji przy użyciu usługi Azure Active Directory
+      url: configure-spring-boot-starter-java-app-with-azure-active-directory.md
+    - text: Konfigurowanie aplikacji do używania pamięci podręcznej Redis Cache
+      url: configure-spring-boot-initializer-java-app-with-redis-cache.md
+    - text: Używanie interfejsu API SQL usługi Azure Cosmos DB
+      url: configure-spring-boot-starter-java-app-with-cosmos-db.md
+    - text: Wdrażanie aplikacji Spring Boot
+      url: deploy-spring-boot-java-app-with-maven-plugin.md
+    - text: Wdrażanie aplikacji w klastrze w usłudze AKS
+      url: deploy-spring-boot-java-app-on-kubernetes.md
+    - text: Wdrażanie aplikacji w usłudze Web App for Containers
+      url: deploy-spring-boot-java-app-on-linux.md
+    - text: Wdrażanie w usłudze Web App for Containers za pomocą programu Maven
+      url: deploy-containerized-spring-boot-java-app-with-maven-plugin.md
+    - text: Wdrażanie aplikacji z usługi ACR na platformie Azure
+      url: deploy-spring-boot-java-app-from-container-registry-using-maven-plugin.md
+- title: Przykłady kodu
+  linkLists:
+  - linkListType: sample
+    links:
+    - text: Przykłady dotyczące środowiska Spring Boot dla platformy Azure
+      url: https://github.com/Microsoft/azure-spring-boot/tree/master/azure-spring-boot-samples
+    - text: Spring — przewodniki
+      url: https://github.com/spring-guides/
+- title: Spring — zasoby
+  linkLists:
+  - linkListType: get-started
+    links:
+    - text: Platforma Spring
+      url: https://spring.io/
+    - text: Spring Cloud Azure
+      url: https://spring.io/projects/spring-cloud-azure
+    - text: Informacje o platformie Spring
+      url: https://spring.io/learn
+    - text: Spring Boot
+      url: https://spring.io/projects/spring-boot
+    - text: Spring Initializr
+      url: https://start.spring.io/
