--- a/java/index.yml
+++ b/java/index.yml
@@ -1,92 +1,94 @@
-### YamlMime:YamlDocument
-documentType: LandingData
-title: Platforma Azure dla deweloperów języka Java w chmurze
+### YamlMime:Landing
+title: Platforma Azure dla deweloperów języka Java w chmurze — dokumentacja
 metadata:
-  title: 'Platforma Azure dla deweloperów języka Java: samouczki, dokumentacja interfejsu API'
-  description: 'Zacznij tworzyć aplikacje dla chmury, korzystając z tych doskonałych samouczków i narzędzi dla deweloperów języka Java.'
-  keywords: 'Azure, Java, SDK, API, Maven, Spring'
-  author: rloutlaw
+  title: Platforma Azure dla deweloperów języka Java w chmurze — dokumentacja
+  ms.service: azure-java
+  author: bmitchell287
   ms.author: brendm
-  manager: douge
-  ms.date: 11/02/2017
-  ms.topic: article
-  ms.technology: azure
-  ms.devlang: java
-  ms.service: multiple
-sections:
-  - items:
-      - type: list
-        style: cards
-        className: cardsM
-        columns: 2
-        items:
-          - href: /azure/app-service/containers/quickstart-java?toc=/azure/java/toc.json&bc=/azure/java/breadcrumb/toc.json
-            html: <p>Wdrażanie swojej pierwszej aplikacji internetowej w usłudze App Service</p>
-            image:
-              src: /media/common/i_get-started.svg
-            title: Aplikacja internetowa platformy Azure
-          - href: 'https://docs.microsoft.com/en-us/azure/spring-cloud/'
-            html: <p>Usługa zarządzana dla chmury Spring Cloud</p>
-            image:
-              src: /java/media/spring.svg
-            title: Azure Spring Cloud
-          - href: /azure/java/spring-framework/
-            html: <p>Usługi platformy Azure ze środowiskiem Spring Boot</p>
-            image:
-              src: /java/media/spring.svg
-            title: Oprogramowanie Spring na platformie Azure
-          - href: java-azure-tools.md
-            html: <p>Narzędzia i środowiska IDE</p>
-            image:
-              src: /media/common/i_download-install.svg
-            title: 'Wtyczki dla oprogramowania IntelliJ, Maven, Eclipse i VS Code'
-          - href: jdk/index.md
-            html: <p>Obsługiwane zestawy JDK</p>
-            image:
-              src: /media/common/i_download-install.svg
-            title: Obsługiwane zestawy JDK
-          - href: /java/api/?view=azure-java
-            html: <p>Dokumentacja interfejsu API</p>
-            image:
-              src: /media/common/i_api-reference.svg
-            title: Zestawy SDK platformy Azure dla języka Java
-  - title: Przewodniki Wprowadzenie
-    items:
-      - type: list
-        style: cards
-        className: cardsM
-        columns: 3
-        items:
-          - image:
-              src: /java/media/spring.svg
-            title: Wdrażanie aplikacji Spring Boot za pomocą oprogramowania Maven
-            href: /azure/java/spring-framework/deploy-spring-boot-java-app-with-maven-plugin
-          - image:
-              src: /java/media/spring.svg
-            title: Mikrousługi z usługą Azure Spring Cloud
-            href: /azure/spring-cloud/spring-cloud-quickstart-launch-app-portal
-          - image:
-              src: /azure/media/index/storage.svg
-            title: Przekazywanie i pobieranie obiektów blob przy użyciu magazynu
-            href: /azure/storage/blobs/storage-quickstart-blobs-java-v10?toc=/azure/java/toc.json&bc=/azure/java/breadcrumb/toc.json
-          - image:
-              src: /azure/media/index/azurefunctions.svg
-            title: Tworzenie funkcji bezserwerowej w języku Java
-            href: /azure/azure-functions/functions-create-first-java-maven?toc=/azure/java/toc.json&bc=/azure/java/breadcrumb/toc.json
-          - image:
-              src: /javascript/azure/media/k8s_logo.svg
-            title: Wdrażanie na platformie Kubernetes
-            href: /azure/java/spring-framework/deploy-spring-boot-java-app-on-kubernetes
-          - image:
-              src: /java/media/jenkins_logo.svg
-            title: Ciągła integracja/ciągłe wdrażanie do usługi App Service przy użyciu usługi Jenkins®
-            href: /azure/jenkins/tutorial-jenkins-deploy-web-app-azure-app-service?toc=/azure/java/toc.json&bc=/azure/java/breadcrumb/toc.json
-  - title: Samples
-    items:
-      - type: list
-        style: unordered
-        items:
-          - html: '<a href="https://github.com/Azure-Samples/e2e-java-experience-in-app-service-linux-part-2">Tworzenie aplikacji Spring Boot przy użyciu systemu Linux i usługi Cosmos DB</a>'
-          - html: '<a href="https://github.com/Azure-Samples/storage-blobs-java-v10-quickstart">Usługa Azure Blob Storage z językiem Java</a>'
-          - html: '<a href="https://github.com/Azure-Samples/azure-cosmos-db-sql-api-async-java-getting-started">Nawiązywanie połączenia z usługą Cosmos DB przy użyciu interfejsu API SQL</a>'
-          - html: '<a href="https://azure.microsoft.com/resources/samples/service-fabric-java-getting-started/">Mikrousługi języka Java z usługą Service Fabric</a>'
+  ms.date: 03/13/2020
+  ms.topic: landing-page
+  ms.openlocfilehash: 470233f8da8e7e0802e89eac7efc0f8594306802
+  ms.sourcegitcommit: efa585ecdcf1cc54a6f0b664fb83cd4f0ccc7b2c
+  ms.translationtype: HT
+  ms.contentlocale: pl-PL
+  ms.lasthandoff: 03/21/2020
+  ms.locfileid: "79990459"
+landingContent:
+- title: Azure App Service
+  linkLists:
+  - linkListType: quickstart
+    links:
+    - text: Wdrażanie pierwszej aplikacji internetowej na platformie Azure
+      url: /azure/app-service/containers/quickstart-java?toc=/azure/java/toc.json&bc=/azure/java/breadcrumb/toc.json
+- title: Azure Functions
+  linkLists:
+  - linkListType: quickstart
+    links:
+    - text: Tworzenie i publikowanie funkcji na platformie Azure
+      url: /azure/azure-functions/functions-create-first-java-maven?toc=/azure/java/toc.json&bc=/azure/java/breadcrumb/toc.json
+- title: Migracja na platformę Azure
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: Omówienie
+      url: migration-overview.md
+- title: Azure Spring Cloud
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: Usługa zarządzana dla chmury Spring Cloud
+      url: /azure/spring-cloud
+- title: Integracja oprogramowania Spring na platformie Azure
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: Usługi platformy Azure ze środowiskiem Spring Boot
+      url: /azure/java/spring-framework
+- title: Narzędzia i środowiska IDE
+  linkLists:
+  - linkListType: get-started
+    links:
+    - text: IntelliJ, Maven, Eclipse i VS Code
+      url: /azure/java/java-azure-tools
+- title: Obsługiwane zestawy JDK
+  linkLists:
+  - linkListType: download
+    links:
+    - text: Język Java dla platformy Azure i usługa Azure Stack
+      url: /azure/java/jdk/
+- title: Zestawy SDK platformy Azure dla języka Java
+  linkLists:
+  - linkListType: reference
+    links:
+    - text: Przeglądarka interfejsów API
+      url: /java/api/?view=azure-java
+- title: Przewodniki Wprowadzenie
+  linkLists:
+  - linkListType: get-started
+    links:
+    - text: Wdrażanie aplikacji Spring Boot za pomocą oprogramowania Maven
+      url: /azure/java/spring-framework/deploy-spring-boot-java-app-with-maven-plugin
+    - text: Mikrousługi z usługą Azure Spring Cloud
+      url: /azure/spring-cloud/spring-cloud-quickstart-launch-app-portal
+    - text: Zarządzanie obiektami blob usługi Azure Storage
+      url: /azure/storage/blobs/storage-quickstart-blobs-java?toc=/azure/java/toc.json&bc=/azure/java/breadcrumb/toc.json
+    - text: Tworzenie funkcji bezserwerowej w języku Java
+      url: /azure/azure-functions/functions-create-first-java-maven?toc=/azure/java/toc.json&bc=/azure/java/breadcrumb/toc.json
+    - text: Wdrażanie na platformie Kubernetes
+      url: /azure/java/spring-framework/deploy-spring-boot-java-app-on-kubernetes
+    - text: Ciągła integracja/ciągłe wdrażanie do usługi App Service przy użyciu usługi Jenkins®
+      url: /azure/jenkins/tutorial-jenkins-deploy-web-app-azure-app-service?toc=/azure/java/toc.json&bc=/azure/java/breadcrumb/toc.json
+- title: Przykłady kodu
+  linkLists:
+  - linkListType: sample
+    links:
+    - text: Tworzenie aplikacji platformy Spring w systemie Linux
+      url: /azure/java/spring-framework/spring-app-service-e2e
+    - text: Tworzenie aplikacji Spring Boot przy użyciu systemu Linux
+      url: https://github.com/Azure-Samples/e2e-java-experience-in-app-service-linux-part-2
+    - text: Eksternalizowanie sesji do pamięci podręcznej Redis Cache
+      url: https://github.com/azure-samples/scaling-stateful-java-web-app-on-azure
+    - text: Azure Storage
+      url: /samples/browse/?products=azure-storage&languages=java
+    - text: Usługa Cosmos DB z interfejsem API SQL
+      url: /samples/browse/?products=azure-cosmos-db%2Cazure-sql-database&languages=java
