--- a/articles/java/fundamentals/index.yml
+++ b/articles/java/fundamentals/index.yml
@@ -6,12 +6,12 @@ metadata:
   description: Narzędzia, środowisk IDE i obsługiwane zestawy JDK do programowania w języku Java na platformie Azure
   ms.date: 04/03/2020
   ms.topic: landing-page
-  ms.openlocfilehash: 5c9b16a6431733875145d071484ae65aee5999fb
-  ms.sourcegitcommit: 0d2ea78f18430c845a32e0d2311427ab81033465
+  ms.openlocfilehash: 6de683ed7b163252798cac8499d19b7e067f0d40
+  ms.sourcegitcommit: 71847ee0a1fee3f3320503629d9a8c82319a1f6a
   ms.translationtype: MT
   ms.contentlocale: pl-PL
-  ms.lasthandoff: 12/23/2020
-  ms.locfileid: "98669446"
+  ms.lasthandoff: 02/03/2021
+  ms.locfileid: "99511110"
 landingContent:
 - title: Narzędzia dla deweloperów chmury Java
   linkLists:
@@ -54,7 +54,7 @@ landingContent:
   - linkListType: overview
     links:
     - text: Konfigurowanie rejestrowania za pomocą zestawu Azure SDK dla języka Java
-      url: ../sdk/java-sdk-azure-log.md
+      url: ../sdk/logging-overview.md
     - text: Monitorowanie i rejestrowanie przy użyciu usługi Logz.io
       url: java-get-started-with-logzio.md
 - title: DevOps
