--- a/articles/java/index.yml
+++ b/articles/java/index.yml
@@ -7,12 +7,12 @@ metadata:
   description: Zacznij opracowywać aplikacje dla chmury, korzystając z tych samouczków i narzędzi dla deweloperów języka Java.
   ms.topic: hub-page
   ms.date: 04/08/2020
-  ms.openlocfilehash: badee30def237b49cb9e46730335e730090fb66b
-  ms.sourcegitcommit: 71847ee0a1fee3f3320503629d9a8c82319a1f6a
+  ms.openlocfilehash: 7c3130d9bb7820f8ddb150fa314292b9e5688811
+  ms.sourcegitcommit: 576c878c338d286060010646b96f3ad0fdbcb814
   ms.translationtype: MT
   ms.contentlocale: pl-PL
-  ms.lasthandoff: 02/03/2021
-  ms.locfileid: "99511093"
+  ms.lasthandoff: 03/04/2021
+  ms.locfileid: "102118352"
 conceptualContent:
   items:
   - title: Przewodnik Szybki Start platformy Azure dla języka Java
@@ -117,7 +117,7 @@ conceptualContent:
     links:
     - text: Tworzenie funkcji platformy Azure
       itemType: quickstart
-      url: /azure/azure-functions/functions-create-first-function-vs-code?pivots=programming-language-java
+      url: /azure/azure-functions/create-first-function-vs-code-java
     - text: Tworzenie funkcji chmury Wiosnowej
       itemType: tutorial
       url: ./spring-framework/getting-started-with-spring-cloud-function-in-azure.md
@@ -156,7 +156,7 @@ conceptualContent:
       text: Zobacz dokumentację Active Directory
       url: /azure/active-directory
 tools:
-  title: Narzędzia
+  title: narzędzia
   items:
   - title: Azure Toolkit for IntelliJ
     imageSrc: https://docs.microsoft.com/media/logos/logo_intellij.svg
