--- a/articles/java/sdk/toc.yml
+++ b/articles/java/sdk/toc.yml
@@ -51,9 +51,9 @@
       expanded: false
       items:
         - name: Spring
-          href: /azure/developer/java/spring-framework/spring-boot-starters-for-azure
+          href: ../spring-framework/spring-boot-starters-for-azure.md
         - name: MicroProfile
-          href: 'https://docs.microsoft.com/azure/developer/java/eclipse-microprofile/'
+          href: ../eclipse-microprofile/index.yml
     - name: Rozwiązywanie problemów
       expanded: false
       items:
@@ -65,7 +65,7 @@
           href: virtual-machine-samples.md
         - name: Aplikacje internetowe
           href: web-apps-samples.md
-        - name: SQL Database
+        - name: Baza danych SQL
           href: sql-database-samples.md
         - name: Zabezpieczenia
           href: security-samples.md
